[package]
name = "js-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc = "0.86.0"
swc_ecma_parser = "0.78.7"
swc_common = "0.14.6"
swc_ecma_visit = "0.44.0"
swc_ecma_ast = "0.58.0"
swc_ecma_transforms = "0.95.0"
swc_ecma_transforms_base = "0.44.2"
swc_ecma_transforms_react = "0.60.0"
swc_ecma_transforms_typescript = "0.61.1"
swc_ecma_transforms_compat = "0.52.12"
serde_json = "1.0.71"
swc_atoms = "0.2.9"
swc_babel_ast = "0.1.0"
swc_bundler = "0.82.2"
